--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "Renderer/GLUtils"]
-	path = Renderer/GLUtils
+[submodule "GameEngien/GLUtils"]
+	path = GameEngine/GLUtils
 	url = git@github.com:ga2arch/GLUtils.git
